src/scss/_header.scss
.header {
  position: relative;
  height: var(--header-height);
  width: 100%;
  contain: style size; // Improves performance

  &__content {
    height: 100%;
    margin: 0 auto;
    max-width: var(--site-width);
  }

  &__logo {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate3d(-50%, -50%, 0);
  }

  :is(.custom-logo-link, .custom-logo) {
    display: block;
  }

  .custom-logo {
    height: var(--header-logo-height);
    max-height: calc(var(--header-height) - 2rem);
    width: fit-content;
    object-fit: contain;
    pointer-events: none; // Prevents drag and Edge image function nonsense
  }

  &__title {
    position: relative;
    top: 40%;
    padding: 16px var(--layout-spacing-horizontal);
    transform: translateY(-50%);

    &:not(._no-text-shadow) {
      text-shadow: var(--site-title-text-shadow);
    }

    &-heading {
      font: 700 var(--site-title-font-size)/1.3 var(--ff-site-title);
      letter-spacing: 0;

      a {
        color: var(--site-title-heading-color);
      }
    }

    &-tagline {
      color: var(--site-title-tagline-color);
      font: 400 var(--site-title-tagline-font-size)/1.3 var(--ff-site-title);
      letter-spacing: 0;
      margin-top: .5rem;
    }
  }
}

.header-background {
  user-select: none;
  position: absolute;
  top: -6px;
  left: 0;
  right: 0;
  height: calc(var(--header-image-height) + 6px); // Offset wrapper margin
  width: 100%;
  transform: translate3d(0, 0, 0);
  backface-visibility: hidden;
  contain: content; // Improve performance

  &._shadow {
    filter: var(--header-image-drop-shadow);
  }

  &._fading-bottom {
    -webkit-mask-image: var(--header-fading-mask-image);
    mask-image: var(--header-fading-mask-image);
  }

  &__wrapper {
    height: calc(100% - 6px); // Offset margin
    background: var(--placeholder-background);
    margin-top: 6px;
    overflow: hidden;
    transform: translateZ(0); // Safari fix
    -webkit-mask-image: var(--header-image-style-mi, var(--mi));
    -webkit-mask-position: var(--header-image-style-mp, var(--mp));
    -webkit-mask-repeat: var(--header-image-style-mr, var(--mr, no-repeat));
    -webkit-mask-size: var(--header-image-style-ms, var(--ms));
    mask-image: var(--header-image-style-mi, var(--mi));
    mask-position: var(--header-image-style-mp, var(--mp));
    mask-repeat: var(--header-image-style-mr, var(--mr, no-repeat));
    mask-size: var(--header-image-style-ms, var(--ms));
  }

  &__image {
    pointer-events: none;
    display: block;
    margin: 0 auto;
    height: 100%;
    width: 100%;
    object-fit: cover;
    contain: layout paint; // Improves performance
  }
}

